# kmushicoin-source

./: .gitattributes  .github\workflows\build.yml  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile  Makefile.am  README.md  configure.ac  kmushicoin-qt-mxe-i686.sh  kmushicoin-qt-mxe-x86_64.sh  kmushicoin-qt.pro
.github/workflows/: build-and-test.yml  build.yml
.travis/: test_05_before_script.sh  test_06_script.sh  test_06_script_a.sh  test_06_script_b.sh
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: KmushiCoin.conf  compile.sh  getpeerinfo_ip.php  gitian-build.py  install_db4.sh  ktv-cli.bash-completion  ktv-qt.pro  ktv-tx.bash-completion  ktvd.bash-completion  valgrind.supp
contrib/debian/: README.md  blackcoin-qt.desktop  blackcoin-qt.install  blackcoin-qt.lintian-overrides  blackcoin-qt.protocol  (+22 more)
depends/: Makefile  README.md
doc/: Doxyfile.in  README  README.md  README_windows.txt  REST-interface.md  assets-attribution.txt  build-msw.txt  build-osx.md  build-osx.txt  build-unix.md  build-unix.txt  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  readme-qt.rst  reduce-memory.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
kmushicoin-source/: README.md
params/: install-params.sh
share/: compile.sh  setup.nsi.in  ui.rc
src/: .main.cpp.swp  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  alert.cpp  amount.h  base58.cpp  base58.h  bip38.cpp  bip38.h  bitcoind.cpp  bitcoinrpc.cpp  blockassembler.cpp  blockassembler.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  (+148 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  ktv.cpp  ktv.qrc  ktv_locale.qrc  ktvstrings.cpp  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  notificator.cpp  notificator.h  (+41 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  intro.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/ktv/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  balancebubble.cpp  balancebubble.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  guitransactionsutils.cpp  guitransactionsutils.h  ktvgui.cpp  ktvgui.h  loadingdialog.cpp  (+57 more)
src/qt/ktv/forms/: addresseswidget.ui  balancebubble.ui  coldstakingwidget.ui  csrow.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendcustomfeedialog.ui  sendmultirow.ui  topbar.ui  txrow.ui  welcomecontentwidget.ui
src/qt/ktv/res/css/: style_dark.css  style_light.css
src/qt/ktv/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/ktv/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswalletoptionswidget.ui  settingswidget.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_AR.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_ky.ts  (+37 more)
src/qt/res/: bitcoin-qt.rc  ktv-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: test_main.cpp  uritests.cpp
test/: README.md
util/: fetch-params.sh
(+555 files in other folders)
